	- fixed the right-hand side of bounding boxes for TT fonts 
	  where the last character overlaps the advance width (eg. 
	  italic fonts)
        - added rotation by exact amounts in degrees or radians,
          implemented using the matrix idea from Addi.  The procedural
          matrix transformer is exposed, but still needs testing (as XS)
          and needs an OO interface, hopefully with some helper tools,
          like the preset interface with ->convert().
        - MY::postamble() in Makefile.PL included a broken rule 
          (Makefile.PL 1.13.2.5)
	- support for GDI fonts under Win32
	- made that work for cygwin too (needs the w32api package)
	- freetype1 support under Win32
	- t1lib support under Win32
	- fixed a minor bug in font.c (invalid font files caused a SEGV)
	- checked cygwin for both t1lib and freetype1
        - freetype 2 support
        - exposed the matrix_transform() function to the OO interface
        - added Imager::Matrix2d convenience class
        - support for setting the resolution when writing to PNG
        - retrieve physical resolution to tags when reading from PNG
        - found an XS bug in the interface to i_tags_add()
        - fixed handling of writing text to a channel with freetype2 
          (sometimes the edge of a character would damage the edge of the 
          previous character)
        - some utf8 support for freetype2
        - some vertical layout support for freetype2
        - named parameters for specifying colors, with quite a few options.
	- glyph size issues for freetyp2
        - minor problem in handling of canon option
        - low-level bmp writing (moving it to laptop)
        - Windows BMP reading and writing

=================================================================

        For latest versions check the Imager-devel pages:
        http://www.eecs.umich.edu/~addi/perl/Imager/devel/

=================================================================
